--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,6 +20,8 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/introHCI.js"></script>
+	{{> facebook}}
+	<script src="/js/facebook.js"></script>
 </head>
 
 <body>
@@ -27,9 +29,12 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div class="jumbotron">
-			<h1 id="name">Scott Klemmer</h1>
+			<h1 id="name">User</h1>
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
-			<p class="facebookLogin">Please login through Facebook</p>
+			<p class="facebookLogin">Please login through Facebook
+				<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+			</p>
+			
 		</div>
 
 		<div id="facebookPhoto" class="profile">
@@ -44,7 +49,7 @@
 		{{#each projects}}
 		<div class="project" id="{{id}}">
 			<div class="thumbnail">
-				<a href="#">
+				<a href="#" onclick="return addProjectDetails();">
 					<img src="images/{{image}}" alt="Lorem Pixel image" class="img">
 					<p>{{name}}</p>
 				</a>
